# cifar10-cnn-classification

./: .gitignore  README.md  TP3_CNN.ipynb  my_model.h5  pyproject.toml
docs/: planning.md  rapport.ipynb
docs/rappport/: rap.aux  rap.fdb_latexmk  rap.fls  rap.tex
results/section8/: section8_results.json
scripts/: __init__.py  plot_batchsize_comparison.py  plot_optimizer_comparison.py  run_section4_experiments.py  section4_pipeline.py  section4_visualization.py  section5_hyperparameters.py  section6_pipeline.py  section6_visualization.py
scripts/section_4/: __init__.py  data.py  data_get_cifar_archive_path.py  data_load_cifar10_from_local_archive.py  data_load_cifar_batch_from_tar.py  data_load_reduced_cifar10.py  data_standardize.py  experiments.py  experiments_aggregate_runs.py  experiments_run_batch_size_study.py  experiments_run_optimizer_study.py  experiments_run_training.py  experiments_stack_metric.py  model.py  model_build_model.py  model_build_optimizer.py  model_get_initial_weights.py  plot_batchsize_comparison.py  plot_optimizer_comparison.py  protocol.py  randomness.py  randomness_ensure_determinism.py  randomness_set_global_seed.py  results.py  results_load_results.py  results_make_results_payload.py  results_run_section4_pipeline.py  results_save_results.py  run_experiments.py  runtime.py  summaries.py  summaries_get_batch_summary_rows.py  summaries_get_optimizer_summary_rows.py  timing.py
scripts/section_5/: __init__.py  formatting.py  formatting__structure_inventory_rows.py  formatting__training_inventory_rows.py  formatting_markdown_table.py  (+16 more)
(+96 files in other folders)
