[project]
name = "tp3images"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago23florido",email = "sanflogom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (<2)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "tensorflow (>=2.16.1,<2.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab (>=4.5.5,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
